tests/errors/std-vec-copy-to-after-target-reset.ari
fn main() -> i64 {
  var source = zone::create(64);
  var target = zone::create(64);
  var vec = std::vec::new<i64>(ref mut source, 1);
  vec.push(21);
  let copied = vec.copy_to(ref mut target);
  zone::reset(ref mut target);
  return copied.get(0);
}
